--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -7,7 +7,7 @@
 }
 
 .projects__item {
-    background: var(--color-bg-variant);
+    background: var(--color-bg);
     padding: 1.3rem;
     border-radius: 2rem;
     border: 1px solid transparent;
