--- a/src/components/team/team.css
+++ b/src/components/team/team.css
@@ -13,7 +13,7 @@
 }
 
 .kit {
-    background: var(--color-bg-variant);
+    background: var(--color-bg);
     text-align: center;
     padding: 2rem;
     border-radius: 2rem;
