--- a/src/components/team/team.css
+++ b/src/components/team/team.css
@@ -9,7 +9,7 @@
     overflow: hidden;
     border-radius: 50%;
     margin: 0 auto 1rem;
-    border: 0.5rem solid var(--color-primary-variant);
+    border: 0.5rem solid white;
 }
 
 .kit {
