--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,11 +1,12 @@
 .about__container {
     display: grid;
-    grid-template-columns: 35% 50%;
+    grid-template-columns: 30% 55%;
     gap: 15%;
 }
 
 .about__me {
     width: 100%;
+    max-width: 400px;
     aspect-ratio: 1/1;
     border-radius: 2rem;
     background: linear-gradient(
@@ -88,7 +89,7 @@
         gap: 0;
     }
     .about__me {
-        width: 60%;
+        width: 50%;
         margin: 2rem auto 4rem;
     }
     .about__content p {
@@ -135,20 +136,3 @@
 }
 
 /* ========== MEDIA QUERIES (SMALL SCREEN) ========== */
-@media screen and (max-width: 500px) {
-    #about {
-        width: 100%;
-        margin-top: -180px;
-        padding-bottom: 50px;
-    }
-    .about__banner {
-        display: none;
-    }
-    .about__me {
-        width: 100%;
-    }
-    .about__cards {
-        grid-template-columns: 1fr;
-        transform: scale(90%);
-    }
-}
